--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -28,6 +28,9 @@
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
+                <li th:if="${session.user != null}">
+                    <a href="/publish">发布</a>
+                </li>
                 <li class="dropdown" th:if="${session.user != null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         <span th:text="${session.user.getName()}"></span>
@@ -51,19 +54,23 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 发起</h2>
             <hr/>
-            <form action="">
+            <form action="/publish" method="post">
                 <div class="form-group">
                     <label for="title">问题标题</label>
-                    <input type="text" name="title" class="form-control" id="title" placeholder="问题标题__">
+                    <input type="text" name="title" th:value="${title}" class="form-control" id="title" placeholder="问题标题__">
                 </div>
                 <div class="form-group">
                     <label for="description">问题补充（必填，请参照右侧提示）：</label>
-                    <textarea name="description" id="description" class="form-control" cols="30" rows="10"></textarea>
+                    <textarea name="description" id="description" th:value="${description}" class="form-control" cols="30" rows="10"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="tag">添加标签：</label>
-                    <input type="text" class="form-control" id="tag" name="tag" placeholder="输入标签，以.号隔开">
+                    <input type="text" class="form-control" id="tag" name="tag" th:value="${tag}" placeholder="输入标签，以.号隔开">
                 </div>
+                <div th:if="${error != null}">
+                    <span class="alert alert-danger" th:text="${error}"></span>
+                </div>
+                <div th:unless="${error != null}"></div>
                 <button type="submit" class="btn btn-success btn-publish">发布</button>
             </form>
         </div>
